# nn-zero-to-hero

./: .gitignore  pyproject.toml
lectures/makemore/: build_makemore_backprop_ninja.ipynb
